# escavador-api

./: LICENSE  README.md  build.sh  pyproject.toml  pyproject_template.toml  requirements.txt
.github/workflows/: ci.yml
src/escavador_api/: data.py  exceptions.py
src/escavador_api/tests/: test__process_data.py
