[project]
name = "escavador-api"
version = "0.1.5"
description = "Python API to interact with Escavador endpoints"
authors = [
    {name = "Murabei Data Science",email = "a.baceti@murabei.com"}
]
license = {text = "BSD-3-Clause License"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.32.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
